--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
-﻿<html><head>
+﻿<!DOCTYPE html>
+<html>
+<head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cameras Location</title>
         <link rel="stylesheet" href="css/app.css">
         <script src="js/three.js"></script>
         <script src="js/OrbitControls.js"></script>
-    </head>
-    <body>
+</head>
+
+
+
+<body>
     <div>
-    <div class="main"><div id="window-3d-view"><div></div></div>
-<div class="input-panel">
-    <div>
-    <div>
-    <div class="title-new-position">New Point:</div>
-    <div class="new-position"><div>
-    <span>X: </span>
-    <input id="new-position-x" type="number">
-    <span>Y: </span>
-    <input id="new-position-y" type="number">
-    <span>Z: </span>
-    <input id="new-position-z" type="number"><br></div>
-    <div><button id="clear-position-x-y-z">
-    Clear Position
-    </button></div></div>
-</div>
-</div>
-    <div id="result"></div>   
-    <div id="control-rotation"><button id="rotation-angles-button">Find Angles</button></div>
-</div></div>
+        <div class="main">
+            <div id="window-3d-view">
+                <div></div>
+            </div>
+            <div class="input-panel">
+                <div>
+                    <div>
+                        <div class="title-new-position">New Point:</div>
+                        <div class="new-position">
+                            <div>
+                                <span>X: </span>
+                                <input id="new-position-x" type="number">
+                                <span>Y: </span>
+                                <input id="new-position-y" type="number">
+                                <span>Z: </span>
+                                <input id="new-position-z" type="number"><br></div>
+                            <div><button id="clear-position-x-y-z">
+                                    Clear Position
+                                </button></div>
+                        </div>
+                    </div>
+                </div>
+                <div id="result"></div>
+                <div id="control-rotation"><button id="rotation-angles-button">Find Angles</button></div>
+            </div>
+        </div>
     </div>
-        <script src="js/app.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/tags.js"></script>
-</body></html>
+    <script src="js/app.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/tags.js"></script>
+</body>
+
+</html>
